--- a/package.json
+++ b/package.json
@@ -127,10 +127,13 @@
     "vite": "^7.3.0"
   },
   "overrides": {
-    "@esbuild-kit/core-utils": {
+    "@esbuild-kit/core-utils@3.3.2": {
       "esbuild": "0.27.2"
     },
     "@esbuild-kit/esm-loader": {
+      "esbuild": "0.27.2"
+    },
+    "drizzle-kit": {
       "esbuild": "0.27.2"
     }
   },
