--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -24,6 +24,16 @@
       "role": "user",
       "content": "scan my pc",
       "timestamp": "2025-12-30T00:40:47.567823"
+    },
+    {
+      "role": "user",
+      "content": "my computer is slow, analyze and fix performance",
+      "timestamp": "2025-12-30T00:45:58.703168"
+    },
+    {
+      "role": "user",
+      "content": "execute remediation",
+      "timestamp": "2025-12-30T00:46:10.602851"
     }
   ],
   "mid_term": [
@@ -1015,6 +1025,32 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T00:40:47.583080"
+    },
+    "memory_3980716d-2da2-4de3-8a47-0616671c4925": {
+      "value": {
+        "text": "my computer is slow, analyze and fix performance",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T00:45:58.743023",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T00:45:58.743040"
+    },
+    "memory_3ffb6950-1014-4e92-a1cc-a9dc5497dcb1": {
+      "value": {
+        "text": "execute remediation",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T00:46:10.623071",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T00:46:10.623090"
     }
   },
   "events": [
@@ -1687,8 +1723,28 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T00:40:47.598352"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "3980716d-2da2-4de3-8a47-0616671c4925",
+        "text_length": 48,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T00:45:58.758311"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "3ffb6950-1014-4e92-a1cc-a9dc5497dcb1",
+        "text_length": 19,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T00:46:10.635683"
     }
   ],
   "semantic_index": {},
-  "last_updated": "2025-12-30T00:40:47.598943"
+  "last_updated": "2025-12-30T00:46:10.636316"
 }
