--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.13.1",
     "identity-obj-proxy": "^3.0.0",
     "input-otp": "^1.4.2",
