--- a/data/memory/projects/Aurora-X/project_memory.json
+++ b/data/memory/projects/Aurora-X/project_memory.json
@@ -130,6 +130,40 @@
       },
       "category": "conversation",
       "timestamp": "2025-12-30T00:57:22.222459"
+    },
+    "interaction_1767074464114": {
+      "value": {
+        "userInput": "list a of things that aren't working",
+        "response": "I understand your request. Let me help you with that.",
+        "intent": {
+          "action": "respond",
+          "confidence": 0.7,
+          "quantum_state": "stable",
+          "query": null,
+          "spec": null,
+          "topic": null
+        },
+        "timestamp": 1767074464114
+      },
+      "category": "conversation",
+      "timestamp": "2025-12-30T01:01:04.126289"
+    },
+    "interaction_1767074540343": {
+      "value": {
+        "userInput": "list a of things that aren't working",
+        "response": "I understand your request. Let me help you with that.",
+        "intent": {
+          "action": "respond",
+          "confidence": 0.7,
+          "quantum_state": "stable",
+          "query": null,
+          "spec": null,
+          "topic": null
+        },
+        "timestamp": 1767074540343
+      },
+      "category": "conversation",
+      "timestamp": "2025-12-30T01:02:20.358157"
     }
   },
   "summary": ""
