--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -1,5 +1,21 @@
 {
-  "short_term": [],
+  "short_term": [
+    {
+      "role": "user",
+      "content": "scan the system and tell me what needs enhancement",
+      "timestamp": "2025-12-30T01:04:35.489864"
+    },
+    {
+      "role": "user",
+      "content": "scan my pc for performance issues",
+      "timestamp": "2025-12-30T01:04:48.687564"
+    },
+    {
+      "role": "user",
+      "content": "scan my pc for performance issues",
+      "timestamp": "2025-12-30T01:05:59.796565"
+    }
+  ],
   "mid_term": [
     {
       "summary": "Compressed 10 messages",
@@ -1198,6 +1214,45 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T01:01:19.978256"
+    },
+    "memory_253010f8-fe38-46fd-831f-ac1f32cfd04c": {
+      "value": {
+        "text": "scan the system and tell me what needs enhancement",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:04:35.514042",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:04:35.514060"
+    },
+    "memory_16adb493-15fa-4067-83b4-43640cea1a85": {
+      "value": {
+        "text": "scan my pc for performance issues",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:04:48.709673",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:04:48.709698"
+    },
+    "memory_f778fc4d-a8e0-4666-82c8-f8f7ee39679c": {
+      "value": {
+        "text": "scan my pc for performance issues",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:05:59.818917",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:05:59.818932"
     }
   },
   "events": [
@@ -2020,8 +2075,38 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T01:01:19.996047"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "253010f8-fe38-46fd-831f-ac1f32cfd04c",
+        "text_length": 50,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:04:35.532875"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "16adb493-15fa-4067-83b4-43640cea1a85",
+        "text_length": 33,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:04:48.724805"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "f778fc4d-a8e0-4666-82c8-f8f7ee39679c",
+        "text_length": 33,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:05:59.828088"
     }
   ],
   "semantic_index": {},
-  "last_updated": "2025-12-30T01:01:19.997662"
+  "last_updated": "2025-12-30T01:05:59.828473"
 }
