--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -2,106 +2,50 @@
   "short_term": [
     {
       "role": "user",
-      "content": "scan the system and tell me what needs enhancement",
-      "timestamp": "2025-12-30T01:04:35.489864"
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.6% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T01:34:49.267645"
     },
     {
       "role": "user",
-      "content": "scan my pc for performance issues",
-      "timestamp": "2025-12-30T01:04:48.687564"
+      "content": "okay scan my pc and tell me how to enhance the windows code?",
+      "timestamp": "2025-12-30T01:35:17.519416"
     },
     {
       "role": "user",
-      "content": "scan my pc for performance issues",
-      "timestamp": "2025-12-30T01:05:59.796565"
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.5% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T01:35:17.593988"
     },
     {
       "role": "user",
-      "content": "scan my pc for performance issues",
-      "timestamp": "2025-12-30T01:15:01.933012"
+      "content": "execute remediation",
+      "timestamp": "2025-12-30T01:35:29.740454"
     },
     {
       "role": "user",
-      "content": "scan my pc and tell me whats wrong with it",
-      "timestamp": "2025-12-30T01:15:54.441495"
+      "content": "Issued remediation: restarting Aurora services via control endpoint.",
+      "timestamp": "2025-12-30T01:35:29.830409"
     },
     {
       "role": "user",
-      "content": "scan my pc for performance issues",
-      "timestamp": "2025-12-30T01:23:09.763250"
+      "content": "can you scan my notepad and tell me how to enhance it?",
+      "timestamp": "2025-12-30T01:36:06.026298"
     },
     {
       "role": "user",
-      "content": "scan my pc for performance issues",
-      "timestamp": "2025-12-30T01:26:36.375556"
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.8% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T01:36:06.107595"
     }
   ],
-  "mid_term": [
+  "mid_term": [],
+  "long_term": [
     {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-05T15:16:09.058407",
-      "last_message": "2025-12-17T07:53:41.865204",
-      "compressed_at": "2025-12-17T07:53:41.867057"
-    },
-    {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-17T07:54:18.477616",
-      "last_message": "2025-12-24T03:56:33.719477",
-      "compressed_at": "2025-12-24T03:56:33.722106"
-    },
-    {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-24T03:56:47.452559",
-      "last_message": "2025-12-28T16:20:21.216758",
-      "compressed_at": "2025-12-28T16:20:21.228381"
-    },
-    {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-28T16:20:29.171641",
-      "last_message": "2025-12-28T16:23:34.350628",
-      "compressed_at": "2025-12-28T16:23:34.355554"
-    },
-    {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-28T16:23:42.901201",
-      "last_message": "2025-12-28T16:51:24.251935",
-      "compressed_at": "2025-12-28T16:51:24.253914"
-    },
-    {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-28T16:52:04.993539",
-      "last_message": "2025-12-28T17:05:09.455842",
-      "compressed_at": "2025-12-28T17:05:09.461577"
-    },
-    {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-28T17:05:21.147838",
-      "last_message": "2025-12-28T17:11:17.352450",
-      "compressed_at": "2025-12-28T17:11:17.356873"
-    },
-    {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-30T00:36:18.005800",
-      "last_message": "2025-12-30T00:53:18.779949",
-      "compressed_at": "2025-12-30T00:53:18.784854"
-    },
-    {
-      "summary": "Compressed 10 messages",
-      "message_count": 10,
-      "first_message": "2025-12-30T00:53:31.429525",
-      "last_message": "2025-12-30T01:01:19.934092",
-      "compressed_at": "2025-12-30T01:01:19.940984"
+      "summary": "Compressed 10 mid-term summaries",
+      "summary_count": 10,
+      "first_summary": "2025-12-05T15:16:09.058407",
+      "last_summary": "2025-12-30T01:34:48.984215",
+      "compressed_at": "2025-12-30T01:34:48.996772"
     }
   ],
-  "long_term": [],
   "facts": {
     "integration_date": {
       "value": "2025-12-05 15:16:14.474146",
@@ -1325,6 +1269,141 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T01:26:36.404037"
+    },
+    "memory_b6ea79d8-1e5f-46e2-aaf0-d8cb1ae82e0e": {
+      "value": {
+        "text": "scan my pc for performance issues",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:28:52.186213",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:28:52.186228"
+    },
+    "memory_12e122eb-cbb0-4f90-bc5e-8003cc3bf1be": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 87.5% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:28:52.307107",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:28:52.307135"
+    },
+    "memory_4339116c-caf2-453c-9094-2197cdd64d20": {
+      "value": {
+        "text": "scan the pc and tell me why is it overheating?",
+        "meta": {
+          "session_id": "chat-1767076437940",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:34:49.112103",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:34:49.112122"
+    },
+    "memory_de9157ba-5aad-4646-99d9-701649e78964": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.6% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "chat-1767076437940",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:34:49.295796",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:34:49.295826"
+    },
+    "memory_bf46a35d-5d14-49e1-b982-3367f9ef3bee": {
+      "value": {
+        "text": "okay scan my pc and tell me how to enhance the windows code?",
+        "meta": {
+          "session_id": "chat-1767076437940",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:35:17.542248",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:35:17.542271"
+    },
+    "memory_7cc61428-674c-4511-9f43-3be050bde881": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.5% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "chat-1767076437940",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:35:17.625577",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:35:17.625604"
+    },
+    "memory_e97a8311-2add-454f-ae47-fd5c49e88009": {
+      "value": {
+        "text": "execute remediation",
+        "meta": {
+          "session_id": "chat-1767076437940",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:35:29.766322",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:35:29.766349"
+    },
+    "memory_7eece4e0-366e-451d-a3d5-cb94fa286324": {
+      "value": {
+        "text": "Issued remediation: restarting Aurora services via control endpoint.",
+        "meta": {
+          "session_id": "chat-1767076437940",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:35:29.858794",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:35:29.858822"
+    },
+    "memory_97664a5b-840c-4fdf-86e5-108342d270d6": {
+      "value": {
+        "text": "can you scan my notepad and tell me how to enhance it?",
+        "meta": {
+          "session_id": "chat-1767076437940",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:36:06.049895",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:36:06.049914"
+    },
+    "memory_e5a16753-fae6-4cb1-a76a-39c5ad6ccf90": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.8% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "chat-1767076437940",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:36:06.138567",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:36:06.138590"
     }
   },
   "events": [
@@ -2217,8 +2296,116 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T01:26:36.411220"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "b6ea79d8-1e5f-46e2-aaf0-d8cb1ae82e0e",
+        "text_length": 33,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:28:52.195390"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "12e122eb-cbb0-4f90-bc5e-8003cc3bf1be",
+        "text_length": 466,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:28:52.322991"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "4339116c-caf2-453c-9094-2197cdd64d20",
+        "text_length": 46,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:34:49.128586"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "de9157ba-5aad-4646-99d9-701649e78964",
+        "text_length": 466,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:34:49.314767"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "bf46a35d-5d14-49e1-b982-3367f9ef3bee",
+        "text_length": 60,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:35:17.560026"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "7cc61428-674c-4511-9f43-3be050bde881",
+        "text_length": 466,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:35:17.641894"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "e97a8311-2add-454f-ae47-fd5c49e88009",
+        "text_length": 19,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:35:29.789662"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "7eece4e0-366e-451d-a3d5-cb94fa286324",
+        "text_length": 68,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:35:29.880410"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "97664a5b-840c-4fdf-86e5-108342d270d6",
+        "text_length": 54,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:36:06.072649"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "e5a16753-fae6-4cb1-a76a-39c5ad6ccf90",
+        "text_length": 466,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:36:06.160330"
     }
   ],
-  "semantic_index": {},
-  "last_updated": "2025-12-30T01:26:36.411624"
+  "semantic_index": {
+    "94e25cc6b6562ec5e9a6f0b9765d527b": {
+      "summary": "Compressed 10 mid-term summaries",
+      "summary_count": 10,
+      "first_summary": "2025-12-05T15:16:09.058407",
+      "last_summary": "2025-12-30T01:34:48.984215",
+      "compressed_at": "2025-12-30T01:34:48.996772"
+    }
+  },
+  "last_updated": "2025-12-30T01:36:06.161053"
 }
