--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -2,41 +2,49 @@
   "short_term": [
     {
       "role": "user",
-      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.6% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
-      "timestamp": "2025-12-30T01:34:49.267645"
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 83.5% used\nTop local processes (CPU/Memory):\nProcess snapshot unavailable (no Windows process data).\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T01:39:11.231866"
     },
     {
       "role": "user",
-      "content": "okay scan my pc and tell me how to enhance the windows code?",
-      "timestamp": "2025-12-30T01:35:17.519416"
+      "content": "scan the pc and tell me why it is overheating",
+      "timestamp": "2025-12-30T01:40:08.924521"
     },
     {
       "role": "user",
-      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.5% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
-      "timestamp": "2025-12-30T01:35:17.593988"
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 84.0% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1643.5 MEM:307.5MB\nCode (pid 36876) CPU:1141.6 MEM:245.4MB\nOmenCommandCenterBackground (pid 30308) CPU:488.9 MEM:201MB\nCode (pid 2624) CPU:417.3 MEM:349.3MB\nDiscord (pid 19564) CPU:416.2 MEM:269.1MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T01:40:10.294782"
     },
     {
       "role": "user",
-      "content": "execute remediation",
-      "timestamp": "2025-12-30T01:35:29.740454"
+      "content": "scan the pc and tell me why it is overheating",
+      "timestamp": "2025-12-30T01:48:53.224425"
     },
     {
       "role": "user",
-      "content": "Issued remediation: restarting Aurora services via control endpoint.",
-      "timestamp": "2025-12-30T01:35:29.830409"
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.7% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1831.3 MEM:374.4MB\nCode (pid 36876) CPU:1268.7 MEM:233.3MB\nOmenCommandCenterBackground (pid 30308) CPU:495.2 MEM:198.6MB\nCode (pid 2624) CPU:447.0 MEM:340.3MB\nDiscord (pid 19564) CPU:427.2 MEM:269.1MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T01:48:54.470842"
     },
     {
       "role": "user",
-      "content": "can you scan my notepad and tell me how to enhance it?",
-      "timestamp": "2025-12-30T01:36:06.026298"
+      "content": "scan the pc and tell me why it is overheating",
+      "timestamp": "2025-12-30T02:03:04.186530"
     },
     {
       "role": "user",
-      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.8% used\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
-      "timestamp": "2025-12-30T01:36:06.107595"
+      "content": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 85.4% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1978.5 MEM:368.6MB\nCode (pid 36876) CPU:1354.7 MEM:228.1MB\nOmenCommandCenterBackground (pid 30308) CPU:507.6 MEM:199.6MB\nCode (pid 2624) CPU:480.3 MEM:423.6MB\nDiscord (pid 19564) CPU:445.7 MEM:269MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+      "timestamp": "2025-12-30T02:03:05.828083"
     }
   ],
-  "mid_term": [],
+  "mid_term": [
+    {
+      "summary": "Compressed 10 messages",
+      "message_count": 10,
+      "first_message": "2025-12-30T01:34:49.267645",
+      "last_message": "2025-12-30T01:39:11.050173",
+      "compressed_at": "2025-12-30T01:39:11.053630"
+    }
+  ],
   "long_term": [
     {
       "summary": "Compressed 10 mid-term summaries",
@@ -1404,6 +1412,141 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T01:36:06.138590"
+    },
+    "memory_7340a509-3e51-4471-9df9-48117ba8f312": {
+      "value": {
+        "text": "scan the pc and tell me why it is overheating",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:38:22.518019",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:38:22.518034"
+    },
+    "memory_15789711-8c4f-4aac-a40c-f93829b3e597": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.8% used\n\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:38:22.751756",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:38:22.751767"
+    },
+    "memory_b4ec1c84-28d9-4559-90e6-4fca88770bc3": {
+      "value": {
+        "text": "scan the pc and tell me why it is overheating",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:39:11.084427",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:39:11.084439"
+    },
+    "memory_55fc3f44-390f-42ff-a72b-29bca15ffd1b": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 83.5% used\nTop local processes (CPU/Memory):\nProcess snapshot unavailable (no Windows process data).\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:39:11.248139",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:39:11.248154"
+    },
+    "memory_805bdf63-c1cf-487e-9e37-7f778659534c": {
+      "value": {
+        "text": "scan the pc and tell me why it is overheating",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:40:08.957089",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:40:08.957104"
+    },
+    "memory_fcedafea-f6a5-4f47-8e32-6fd7e1c41b01": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 84.0% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1643.5 MEM:307.5MB\nCode (pid 36876) CPU:1141.6 MEM:245.4MB\nOmenCommandCenterBackground (pid 30308) CPU:488.9 MEM:201MB\nCode (pid 2624) CPU:417.3 MEM:349.3MB\nDiscord (pid 19564) CPU:416.2 MEM:269.1MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:40:10.310722",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:40:10.310744"
+    },
+    "memory_b7355df5-606b-4492-a34f-e2a287810425": {
+      "value": {
+        "text": "scan the pc and tell me why it is overheating",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T01:48:53.252904",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:48:53.252922"
+    },
+    "memory_3a3da0ab-8d8b-4282-9676-1500177cb5e6": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 81.7% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1831.3 MEM:374.4MB\nCode (pid 36876) CPU:1268.7 MEM:233.3MB\nOmenCommandCenterBackground (pid 30308) CPU:495.2 MEM:198.6MB\nCode (pid 2624) CPU:447.0 MEM:340.3MB\nDiscord (pid 19564) CPU:427.2 MEM:269.1MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T01:48:54.484668",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T01:48:54.484686"
+    },
+    "memory_2fffe299-f8ac-4f4f-b977-e6404e71d135": {
+      "value": {
+        "text": "scan the pc and tell me why it is overheating",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T02:03:04.216492",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T02:03:04.216508"
+    },
+    "memory_d30cd83b-ba00-49cb-b126-3528a18d1e79": {
+      "value": {
+        "text": "Performance check:\nCPU: 0.00 load / 20 cores\nMemory: 85.4% used\nTop local processes (CPU/Memory):\nCode (pid 14840) CPU:1978.5 MEM:368.6MB\nCode (pid 36876) CPU:1354.7 MEM:228.1MB\nOmenCommandCenterBackground (pid 30308) CPU:507.6 MEM:199.6MB\nCode (pid 2624) CPU:480.3 MEM:423.6MB\nDiscord (pid 19564) CPU:445.7 MEM:269MB\nRecommended actions: Close heavy apps and browser tabs consuming CPU/RAM. Kill stray dev servers: run x-stop or close ports 5000/5002/8000 if unused. Reduce worker load: pause scans or lower concurrency for a few minutes. Optional: restart Aurora services (x-stop then x-start) to clear stale processes.\nSay 'execute remediation' to restart Aurora services now, or tell me which process/port to target.",
+        "meta": {
+          "session_id": "default",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T02:03:05.843501",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T02:03:05.843512"
     }
   },
   "events": [
@@ -2396,6 +2539,106 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T01:36:06.160330"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "7340a509-3e51-4471-9df9-48117ba8f312",
+        "text_length": 45,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:38:22.527735"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "15789711-8c4f-4aac-a40c-f93829b3e597",
+        "text_length": 467,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:38:22.761609"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "b4ec1c84-28d9-4559-90e6-4fca88770bc3",
+        "text_length": 45,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:39:11.091566"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "55fc3f44-390f-42ff-a72b-29bca15ffd1b",
+        "text_length": 556,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:39:11.259240"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "805bdf63-c1cf-487e-9e37-7f778659534c",
+        "text_length": 45,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:40:08.965709"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "fcedafea-f6a5-4f47-8e32-6fd7e1c41b01",
+        "text_length": 720,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:40:10.319779"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "b7355df5-606b-4492-a34f-e2a287810425",
+        "text_length": 45,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:48:53.266252"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "3a3da0ab-8d8b-4282-9676-1500177cb5e6",
+        "text_length": 722,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T01:48:54.498246"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "2fffe299-f8ac-4f4f-b977-e6404e71d135",
+        "text_length": 45,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T02:03:04.230006"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "d30cd83b-ba00-49cb-b126-3528a18d1e79",
+        "text_length": 720,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T02:03:05.851181"
     }
   ],
   "semantic_index": {
@@ -2407,5 +2650,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2025-12-30T01:36:06.161053"
+  "last_updated": "2025-12-30T02:03:05.851461"
 }
