--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -14,6 +14,16 @@
       "role": "user",
       "content": "Diagnostics report:\nLuminar: ONLINE | Memory: ONLINE | Nexus V3: ONLINE (hyperspeed) | AuroraX: ONLINE\nWorkers: total 300, active 0, idle 300\nPacks: 15/15 packs, 20 submodules\nRecommendations: No critical faults detected.",
       "timestamp": "2025-12-30T02:44:00.405504"
+    },
+    {
+      "role": "user",
+      "content": "analyze codebase and tell what is wrong",
+      "timestamp": "2025-12-30T03:46:50.647716"
+    },
+    {
+      "role": "user",
+      "content": "Aurora bridge offline; synthesized draft for: analyze codebase and tell what is wrong",
+      "timestamp": "2025-12-30T03:46:53.820009"
     }
   ],
   "mid_term": [
@@ -1615,6 +1625,33 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T02:44:00.433839"
+    },
+    "memory_e39f32f1-6fda-4ab6-bb6d-bf4382a2cf29": {
+      "value": {
+        "text": "analyze codebase and tell what is wrong",
+        "meta": {
+          "session_id": "chat-1767084375228",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T03:46:50.687875",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T03:46:50.687891"
+    },
+    "memory_07ccd157-7c50-4d78-9f9e-e30016764f06": {
+      "value": {
+        "text": "Aurora bridge offline; synthesized draft for: analyze codebase and tell what is wrong",
+        "meta": {
+          "session_id": "chat-1767084375228",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T03:46:53.848396",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T03:46:53.848422"
     }
   },
   "events": [
@@ -2767,6 +2804,26 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T02:44:00.449893"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "e39f32f1-6fda-4ab6-bb6d-bf4382a2cf29",
+        "text_length": 39,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T03:46:50.703884"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "07ccd157-7c50-4d78-9f9e-e30016764f06",
+        "text_length": 85,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T03:46:53.863977"
     }
   ],
   "semantic_index": {
@@ -2778,5 +2835,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2025-12-30T02:44:00.450530"
+  "last_updated": "2025-12-30T03:46:53.864413"
 }
