--- a/data/memory/projects/CompressionTest/project_memory.json
+++ b/data/memory/projects/CompressionTest/project_memory.json
@@ -2,23 +2,33 @@
   "short_term": [
     {
       "role": "user",
+      "content": "Test message 6",
+      "timestamp": "2025-12-30T03:47:49.504126"
+    },
+    {
+      "role": "user",
+      "content": "Test message 7",
+      "timestamp": "2025-12-30T03:47:49.506645"
+    },
+    {
+      "role": "user",
       "content": "Test message 8",
-      "timestamp": "2025-12-28T08:13:04.611737"
+      "timestamp": "2025-12-30T03:47:49.510334"
     },
     {
       "role": "user",
       "content": "Test message 9",
-      "timestamp": "2025-12-28T08:13:04.612258"
+      "timestamp": "2025-12-30T03:47:49.516366"
     },
     {
       "role": "user",
       "content": "Test message 10",
-      "timestamp": "2025-12-28T08:13:04.612805"
+      "timestamp": "2025-12-30T03:47:49.521210"
     },
     {
       "role": "user",
       "content": "Test message 11",
-      "timestamp": "2025-12-28T08:13:04.613335"
+      "timestamp": "2025-12-30T03:47:49.524665"
     }
   ],
   "mid_term": [
@@ -70,6 +80,13 @@
       "first_message": "2025-12-28T08:12:37.649914",
       "last_message": "2025-12-28T08:13:04.610862",
       "compressed_at": "2025-12-28T08:13:04.611203"
+    },
+    {
+      "summary": "Compressed 10 messages",
+      "message_count": 10,
+      "first_message": "2025-12-28T08:13:04.611737",
+      "last_message": "2025-12-30T03:47:49.498255",
+      "compressed_at": "2025-12-30T03:47:49.500930"
     }
   ],
   "long_term": [],
@@ -85,5 +102,5 @@
   },
   "events": [],
   "semantic_index": {},
-  "last_updated": "2025-12-28T08:13:04.613732"
+  "last_updated": "2025-12-30T03:47:49.527132"
 }
