bridge: NL->Project :: analyze codebase and tell me what is wrong?

--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -24,6 +24,16 @@
       "role": "user",
       "content": "Aurora bridge offline; synthesized draft for: analyze codebase and tell what is wrong",
       "timestamp": "2025-12-30T03:46:53.820009"
+    },
+    {
+      "role": "user",
+      "content": "analyze codebase and tell me what is wrong?",
+      "timestamp": "2025-12-30T03:58:01.970657"
+    },
+    {
+      "role": "user",
+      "content": "Aurora bridge offline; synthesized draft for: analyze codebase and tell me what is wrong?",
+      "timestamp": "2025-12-30T03:58:05.178048"
     }
   ],
   "mid_term": [
@@ -1652,6 +1662,33 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-30T03:46:53.848422"
+    },
+    "memory_66b280fe-1550-4513-8689-ee0530cb48e7": {
+      "value": {
+        "text": "analyze codebase and tell me what is wrong?",
+        "meta": {
+          "session_id": "chat-1767085070311",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-30T03:58:02.010130",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T03:58:02.010147"
+    },
+    "memory_add35d81-528f-4ca0-9f3c-d522e5c21ecb": {
+      "value": {
+        "text": "Aurora bridge offline; synthesized draft for: analyze codebase and tell me what is wrong?",
+        "meta": {
+          "session_id": "chat-1767085070311",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2025-12-30T03:58:05.253603",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-30T03:58:05.253624"
     }
   },
   "events": [
@@ -2824,6 +2861,26 @@
         "longterm": false
       },
       "timestamp": "2025-12-30T03:46:53.863977"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "66b280fe-1550-4513-8689-ee0530cb48e7",
+        "text_length": 43,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T03:58:02.029775"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "add35d81-528f-4ca0-9f3c-d522e5c21ecb",
+        "text_length": 89,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-30T03:58:05.276266"
     }
   ],
   "semantic_index": {
@@ -2835,5 +2892,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2025-12-30T03:46:53.864413"
+  "last_updated": "2025-12-30T03:58:05.276969"
 }
